test/should-fail/badinteger.f3
/**
 * Ensure that out of range integers are caught by the lexer/parser, rather than
 * causing runtime exceptions.
 *
 * @test/compile-error
 */

var v = 999999999999999999999999999999999999999;
var v = -999999999999999999999999999999999999999;
